--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,20 @@
-http {
-  upstream backend_services {
-    server server_1:4000;
-    server server_2:4001;
-  }
+upstream backend_services {
+  hash $remote_addr consistent;
+  server server_1:4000;
+  server server_2:4001;
+}
 
-  server {
-    listen 80;
+server {
+  listen 80;
 
-    location / {
-      proxy_pass http://backend_services;
-    }
+  location / {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    
+    proxy_pass http://backend_services;
   }
 }
