prod nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,15 @@
+# dev
+# upstream backend_services {
+#   hash $remote_addr consistent;
+#   server server_1:4000;
+#   server server_2:4001;
+# }
+
+# prod
 upstream backend_services {
   hash $remote_addr consistent;
-  server server_1:4000;
-  server server_2:4001;
+  server https://scalable-ws-redis-server-1.onrender.com;
+  server https://scalable-ws-redis-server-2.onrender.com;
 }
 
 server {
