fix nginx domain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,8 @@
 # prod
 upstream backend_services {
   hash $remote_addr consistent;
-  server https://scalable-ws-redis-server-1.onrender.com;
-  server https://scalable-ws-redis-server-2.onrender.com;
+  server scalable-ws-redis-server-1.onrender.com;
+  server scalable-ws-redis-server-2.onrender.com;
 }
 
 server {
