--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ upstream backend_services {
 
 server {
   listen 80;
+  listen 443 default_server ssl;
 
   location / {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
