--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,9 +14,7 @@ upstream backend_services {
 
 server {
   listen 80;
-  listen 443 default_server ssl;
-  ssl_certificate /etc/nginx/certs/default.crt;
-  ssl_certificate_key /etc/nginx/certs/default.key;
+  listen 443 ssl;
 
   location / {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
