--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,6 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     
-    proxy_pass http://backend_services;
+    proxy_pass https://backend_services;
   }
 }
