--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,14 @@
-# dev
-# upstream backend_services {
-#   hash $remote_addr consistent;
-#   server server_1:4000;
-#   server server_2:4001;
-# }
-
-# prod
 upstream backend_services {
   hash $remote_addr consistent;
-  server scalable-ws-redis-server-1.onrender.com;
-  server scalable-ws-redis-server-2.onrender.com;
+  server scalable-ws-redis-server-1.onrender.com:443;
+  server scalable-ws-redis-server-2.onrender.com:443;
 }
 
 server {
   listen 80;
 
   location /socket.io/ {
-    proxy_pass http://backend_services;
+    proxy_pass https://backend_services;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -36,8 +28,7 @@ server {
   }
 
   location / {
-    # Handle regular HTTPS requests
-    proxy_pass http://backend_services;
+    proxy_pass https://backend_services;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
