--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
